--- a/skin/frontend/meanbee/default/css/styles.scss
+++ b/skin/frontend/meanbee/default/css/styles.scss
@@ -1578,6 +1578,182 @@ tr {
 .col-right .truncated .show .item-options { left: -240px; top: 7px; }
 /* ======================================================================================= */
 
+/* My Account ============================================================================= */
+.my-account .title-buttons .link-rss { float: none; margin: 0; }
+
+/********** < Dashboard */
+.dashboard .welcome-msg { margin: 0 8em 1.5em 0;
+    p { margin: 0; }
+}
+.dashboard .col2-set { margin: 0 0 15px; }
+
+/* General Box */
+.box-account { background: #fff url(../images/bkg_account_box.gif) repeat-x 0 0; border: 1px solid #ccc; border-color: #ccc #999 #999 #ccc; margin: 0 0 20px; padding: 15px;
+    .box-head { border-bottom: 1px solid #d9dde3; margin: 0 0 10px; text-align: right;
+        h2 { background-position: 0 0; background-repeat: no-repeat; color: #e65505; float: left; font-size: 13px; font-weight: bold; margin: 0; padding-left: 21px; text-transform: uppercase; }
+    }
+}
+
+.dashboard .box .box-title { background: url(../images/bkg_divider1.gif) repeat-x 0 100%; margin: 0 0 8px; padding: 0 0 2px; text-align: right;
+    h3, h4 { float: left; font-size: 13px; font-weight: bold; margin: 0; }
+}
+
+/* Block: Recent Orders */
+.dashboard .box-recent .box-head h2 { background-image :url(../images/i_folder-table.gif); }
+
+/* Block: Account Information */
+.dashboard .box-info {
+    .box-head h2 { background-image: url(../images/i_ma-info.gif); }
+    h4 { font-size: 11px; font-weight: bold; text-transform: uppercase; }
+}
+
+/* Block: Reviews */
+.dashboard .box-reviews {
+    .box-head h2 { background-image: url(../images/i_ma-reviews.gif); }
+    .number { background: #0a263c; color: #fff; float: left; font-size: 10px; font-weight: bold; line-height: 1; margin: 3px -20px 0 0; padding: 2px 3px; }
+    .details { margin-left: 20px; }
+    li.item { margin: 0 0 7px; }
+    li.item.last { margin: 0; }
+    .ratings { margin: 7px 0 0; }
+}
+
+/* Block: Tags */
+.dashboard .box-tags {
+    .box-head h2 { background-image: url(../images/i_ma-tags.gif); }
+    .number { background: #0a263c; color: #fff; float: left; font-size: 10px; font-weight: bold; line-height: 1; margin: 3px -20px 0 0; padding: 2px 3px; }
+    .details { margin-left: 20px; }
+    li.item { margin: 0 0 7px; }
+    li.item.last { margin: 0; }
+    .tags strong, .tags ul, .tags ul li { display: inline; }
+}
+/********** Dashboard > */
+
+/* Address Book */
+.addresses-list {
+    h2 { color: #e26703; font-size: 13px; font-weight: bold; text-transform: uppercase; }
+    h3 { font-size: 13px; font-weight: bold; }
+    address { margin: 0 0 3px; }
+    p { margin: 0; }
+    a { font-weight: bold; }
+    .link-remove { color: #646464; }
+    .separator { margin: 0 3px; }
+    li.item { background: #fff url(../images/bkg_account_box.gif) repeat-x 0 0; border: 1px solid #ccc; margin: 0 0 10px; padding: 10px 13px; }
+    li.empty { background: none; border: 0; padding: 0; }
+    li.empty p { font-weight: bold; }
+    .addresses-additional li.item { background: none; border: 0; padding: 0; }
+}
+
+/* Order View */
+.order-info { background: #dee5e8; border: 1px solid #d0cbc1; margin: 0 0 8px; padding: 4px 8px;
+    dt, dd, ul, li { display: inline; }
+    .current { font-weight: bold; }
+    li { margin: 0 3px; }
+}
+
+.order-date { margin: 10px 0; }
+
+.order-info-box { background: #fff url(../images/bkg_block-title.gif) repeat-x 0 0; border: 1px solid #d0cbc1; margin: 0 0 15px; padding: 12px 15px;
+    h2 { font-size: 13px; font-weight: bold; }
+    .box-payment {
+        p { margin: 0 0 3px; }
+        th { font-weight: bold; padding-right: 7px; }
+    }
+}
+
+.order-items { overflow-x: auto; width: 100%;
+    h2, h3 { clear: none; color: #0a263c; font-size: 13px; font-weight: bold; margin: 0 0 5px; padding: 0; }
+    .product-name { font-size: 1em !important; font-weight: bold !important; }
+    .link-print { color: #1e7ec8; font-weight: normal; }
+    .order-links { text-align: right; }
+}
+
+.order-additional { margin: 15px 0; }
+/* Order Gift Message */
+.gift-message {
+    dt strong { color: #666; }
+    dd { font-size: 13px; margin: 5px 0 0; }
+}
+/* Order Comments */
+.order-about {
+    dt { font-weight: bold; }
+    dd { font-size: 13px; margin: 0 0 7px; }
+}
+
+.tracking-table { margin: 0 0 15px; 
+    th { font-weight: bold; white-space: nowrap; }
+}
+
+.tracking-table-popup { width: 100%;
+    th { font-weight: bold; white-space: nowrap; }
+    th, td { padding: 1px 8px; }
+}
+
+/* Order Print Pages */
+.page-print {
+    h1 { font-size: 16px; font-weight: bold; }
+    h2,
+    h3 { font-size: 13px; font-weight: bold; }
+    h2.h2 { font-size: 16px; font-weight: bold; }
+    .order-date { background: url(../images/bkg_divider1.gif) repeat-x 0 100%; margin: 0 0 10px; padding: 0 0 10px; }
+    .col2-set { margin: 0 0 10px; }
+    /* Price Rewrites */
+    .gift-message-link { display: none; }
+    .price-excl-tax, .price-incl-tax { display: block; white-space: nowrap; }
+    .cart-price, .price-excl-tax .label, .price-incl-tax .label, .price-excl-tax .price, .price-incl-tax .price { display: inline; }
+    .print-head { margin: 0 0 15px;
+        .logo { float: left; }
+        address { float: left; margin-left: 15px; }
+    }
+}
+
+/* My Wishlist */
+.my-wishlist {
+    .data-table td { padding: 10px; }
+    .product-image { display: block; height: 113px; margin: 0 0 5px; width: 113px; }
+    textarea { display: block; height: 109px; width: 97%; }
+    .buttons-set { margin-top: 2em;
+        button.button { float: none; }
+        .btn-add span,
+        .btn-share span { background: #618499; border-color: #406a83; }
+    }
+}
+#wishlist-table .add-to-links { white-space: nowrap; }
+
+/* My Tags */
+.my-tag-edit { float: left; margin: 0 0 10px;
+    .btn-remove { float: right; margin: 4px 0 0 5px; }
+}
+#my-tags-table { clear: both;
+    td { padding: 10px; }
+    .add-to-links { white-space: nowrap; }
+}
+
+/* My Reviews */
+#my-reviews-table td { padding: 10px; }
+
+.product-review {
+    h3 { color: #2f2f2f; font-size: 12px; margin: 0 0 3px; }
+    dt { font-weight: bold; }
+    dd { font-size: 13px; margin: 5px 0 0; }
+    .product-details { margin-left: 150px; }
+    .product-name { font-size: 16px; font-weight: bold; margin: 0 0 10px; }
+    .ratings-table { margin: 0 0 10px; }
+    .product-img-box { float: left; width: 140px;
+        .product-image { display: block; height: 125px; width: 125px; }
+        .label { font-size: 11px; margin: 0 0 3px; }
+        .ratings .rating-box { display: block; float: none; margin: 0 0 3px; }
+    }
+}
+
+/* Billing Agreements */
+.billing-agreements {
+    .info-box { margin: 15px 0; }
+    .form-list li select { float: left; }
+    .form-list li button.button { float: left; margin-left: 10px; }
+    .table-caption { font-size: 13px; font-weight: bold; }
+}
+/* ======================================================================================= */
+
 /* MAP Popup====================================================================== */
 .cart-msrp-totals { color:red; font-size:12px !important; font-weight:bold; margin:10px 10px 0; padding:10px; text-align:right; text-transform:uppercase;}
 .map-cart-sidebar-total { color:red; display:block; font-size:10px; font-weight:bold; text-align:left; padding:2px 5px; text-shadow:0 1px 0 #fff; }
