--- a/skin/frontend/meanbee/default/css/styles.css
+++ b/skin/frontend/meanbee/default/css/styles.css
@@ -2922,6 +2922,145 @@ tr.summary-details-excluded {
   top: 7px; }
 
 /* ======================================================================================= */
+/* Account Login/Create Pages ============================================================ */
+.account-login .new-users h2 {
+  background-image: url(../images/i_page1.gif); }
+.account-login .registered-users h2 {
+  background-image: url(../images/i_page2.gif); }
+.account-login .buttons-set {
+  border: 1px solid #bbb6a5;
+  border-top: 0;
+  margin: 0;
+  padding: 8px 13px;
+  background: #dee5e8 url(../images/bkg_buttons-set1.gif) repeat-x 0 0; }
+.account-login .content {
+  background: #faf7ee url(../images/bkg_login-box.gif) repeat-x 0 0;
+  border: 1px solid #bbb6a5;
+  border-bottom: 0;
+  min-height: 345px;
+  padding: 14px 21px; }
+  .account-login .content h2 {
+    border-bottom: 1px solid #ddd;
+    background-position: 0 1px;
+    background-repeat: no-repeat;
+    color: #e76200;
+    font-size: 13px;
+    font-weight: bold;
+    margin: 0 0 14px;
+    padding: 0 0 5px 23px;
+    text-transform: uppercase; }
+
+/* Captcha ================================================================================ */
+.captcha-note {
+  clear: left;
+  padding-top: 5px; }
+
+.captcha-image {
+  float: left;
+  display: inline;
+  margin: 0;
+  position: relative;
+  width: 258px; }
+
+.captcha-image .captcha-img {
+  border: 1px solid #b6b6b6;
+  vertical-align: bottom;
+  width: 100%; }
+
+.registered-users .captcha-image {
+  margin: 0; }
+
+.captcha-reload {
+  cursor: pointer;
+  position: absolute;
+  right: 2px;
+  top: 2px; }
+
+.captcha-reload.refreshing {
+  animation: rotate 1.5s infinite linear;
+  -webkit-animation: rotate 1.5s infinite linear;
+  -moz-animation: rotate 1.5s infinite linear; }
+
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0); }
+
+  0% {
+    -webkit-transform: rotate(-360deg); } }
+
+@-moz-keyframes rotate {
+  0% {
+    -moz-transform: rotate(0); }
+
+  0% {
+    -moz-transform: rotate(-360deg); } }
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0); }
+
+  0% {
+    transform: rotate(-360deg); } }
+
+/* Remember Me Popup ===================================================================== */
+.window-overlay {
+  background: url(../images/window_overlay.png) repeat;
+  background: rgba(0, 0, 0, 0.35);
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 990; }
+
+.remember-me label {
+  float: none;
+  margin: 0 6px; }
+
+.remember-me-popup {
+  background: #fff;
+  border: 1px solid #ccc;
+  -moz-box-shadow: 0 0 6px #ccc;
+  -webkit-box-shadow: 0 0 6px #ccc;
+  -box-shadow: 0 0 6px #ccc;
+  left: 50%;
+  margin: -85px 0 0 -200px;
+  position: absolute;
+  text-align: left;
+  top: 50%;
+  width: 400px;
+  z-index: 1000; }
+  .remember-me-popup h3 {
+    background: #d9e5ee;
+    border-bottom: 1px solid #ccc;
+    font-size: 14px;
+    padding: 5px 10px; }
+  .remember-me-popup .remember-me-popup-head {
+    position: relative; }
+    .remember-me-popup .remember-me-popup-head .remember-me-popup-close {
+      background: url(../images/btn_window_close.gif) no-repeat;
+      display: block;
+      height: 15px;
+      position: absolute;
+      right: 7px;
+      text-indent: -9999em;
+      top: 7px;
+      width: 15px; }
+  .remember-me-popup .remember-me-popup-body {
+    padding: 10px; }
+    .remember-me-popup .remember-me-popup-body a {
+      background: #f18200;
+      border: 1px solid #de5400;
+      color: #fff;
+      display: inline-block;
+      font: bold 12px/19px Arial, Helvetica, sans-serif;
+      height: 19px;
+      padding: 0 8px;
+      text-align: center;
+      text-decoration: none;
+      white-space: nowrap; }
+
+/* Remember Me Popup ===================================================================== */
 /* My Account ============================================================================= */
 .my-account .title-buttons .link-rss {
   float: none;
