--- a/skin/frontend/meanbee/default/css/styles.css
+++ b/skin/frontend/meanbee/default/css/styles.css
@@ -2922,6 +2922,562 @@ tr.summary-details-excluded {
   top: 7px; }
 
 /* ======================================================================================= */
+/* Checkout ============================================================================== */
+/********** < Common Checkout Styles */
+/* Shipping and Payment methods */
+.sp-methods {
+  margin: 0 0 8px; }
+  .sp-methods dt {
+    font-weight: bold;
+    margin: 13px 0 5px; }
+  .sp-methods dd li {
+    margin: 5px 0; }
+  .sp-methods label {
+    color: #666;
+    font-weight: bold; }
+  .sp-methods .price {
+    font-weight: bold; }
+  .sp-methods select.month {
+    margin-right: 10px;
+    width: 154px; }
+  .sp-methods select.year {
+    width: 96px; }
+  .sp-methods input.cvv {
+    width: 3em !important; }
+  .sp-methods .form-list {
+    padding-left: 20px; }
+    .sp-methods .form-list li {
+      margin: 0 0 8px; }
+  .sp-methods .checkmo-list li {
+    margin: 0 0 5px; }
+  .sp-methods .checkmo-list label {
+    padding-right: 10px;
+    text-align: right;
+    width: 135px; }
+  .sp-methods .checkmo-list address {
+    float: left; }
+  .sp-methods .centinel-logos a {
+    margin-right: 3px; }
+  .sp-methods .centinel-logos img {
+    vertical-align: middle; }
+  .sp-methods .release-amounts {
+    margin: 0.5em 0; }
+    .sp-methods .release-amounts button {
+      float: left;
+      margin: 5px 10px 0 0; }
+
+.please-wait {
+  float: right; }
+  .please-wait img {
+    vertical-align: middle; }
+
+.cvv-what-is-this {
+  cursor: help;
+  font-size: 11px;
+  margin-left: 10px; }
+
+/* Tooltip */
+.tool-tip {
+  background: #EAF6FF;
+  border: 1px solid #7BA7C9;
+  padding: 15px 20px;
+  position: absolute;
+  z-index: 9999; }
+  .tool-tip .tool-tip-content {
+    padding: 5px; }
+  .tool-tip .btn-close {
+    margin: -9px -14px 0;
+    text-align: right; }
+    .tool-tip .btn-close a {
+      background: url(../images/btn_window_close.gif) no-repeat 100% 0;
+      display: block;
+      height: 15px;
+      margin: 0 0 0 auto;
+      overflow: hidden;
+      text-align: left;
+      text-indent: -999em;
+      width: 15px; }
+
+/* Gift Messages */
+.gift-messages h3 {
+  color: #e87403;
+  font-size: 12px;
+  font-weight: bold; }
+.gift-messages p.control {
+  color: #8e8d8b; }
+
+.gift-messages-form {
+  position: relative; }
+  .gift-messages-form label {
+    float: none !important;
+    position: static !important; }
+  .gift-messages-form h4 {
+    color: #e87403;
+    font-size: 12px;
+    font-weight: bold; }
+  .gift-messages-form .whole-order {
+    margin: 0 0 25px; }
+  .gift-messages-form .item {
+    margin: 0 0 10px; }
+    .gift-messages-form .item .product-img-box {
+      float: left;
+      width: 75px; }
+    .gift-messages-form .item .product-image {
+      margin: 0 0 7px; }
+    .gift-messages-form .item .number {
+      color: #8a8987;
+      font-weight: bold;
+      margin: 0;
+      text-align: center; }
+    .gift-messages-form .item .details {
+      margin-left: 90px; }
+      .gift-messages-form .item .details .product-name {
+        font-size: 13px;
+        font-weight: bold;
+        margin: 0 0 10px; }
+      .gift-messages-form .item .details .form-list .field {
+        width: 255px; }
+      .gift-messages-form .item .details .form-list .input-box {
+        width: 240px; }
+      .gift-messages-form .item .details .form-list input.input-text {
+        width: 234px; }
+      .gift-messages-form .item .details .form-list li.wide .input-box {
+        width: 500px; }
+      .gift-messages-form .item .details .form-list li.wide textarea {
+        width: 494px; }
+
+.gift-message-link {
+  background: url(../images/bkg_collapse-gm.gif) no-repeat 100% 6px;
+  font-size: 11px;
+  padding-right: 7px; }
+
+.gift-message-link.expanded {
+  background-position: 100% -40px; }
+
+.gift-message-row {
+  background: #f2efe9; }
+
+.gift-message-row .btn-close {
+  background: url(../images/btn_gm-close.gif) no-repeat 0 0;
+  float: right;
+  font-size: 0;
+  height: 16px;
+  line-height: 0;
+  overflow: hidden;
+  text-indent: -999em;
+  width: 16px; }
+
+/* Checkout Agreements */
+.checkout-agreements li {
+  margin: 30px 0; }
+.checkout-agreements .agreement-content {
+  background-color: #fbfaf6;
+  border: 1px solid #bbb6a5;
+  height: 12em;
+  overflow: auto;
+  padding: 10px; }
+.checkout-agreements .agree {
+  margin: 0;
+  padding: 10px 0 10px 11px; }
+  .checkout-agreements .agree input.checkbox {
+    margin-right: 6px; }
+  .checkout-agreements .agree label {
+    color: #666;
+    font-weight: bold; }
+
+.opc .checkout-agreements {
+  border: 1px solid #d9dde3;
+  border-width: 0 1px;
+  padding: 5px 30px; }
+  .opc .checkout-agreements li {
+    margin: 20px 0 0; }
+  .opc .checkout-agreements .agreement-content {
+    background-color: #fff;
+    border-color: #e4e4e4;
+    padding: 5px; }
+  .opc .checkout-agreements .agree {
+    padding-left: 6px; }
+
+/* Centinel */
+.centinel .authentication {
+  background: #fff;
+  border: 1px solid #ddd; }
+  .centinel .authentication iframe {
+    background: transparent !important;
+    border: 0 !important;
+    height: 400px;
+    margin: 0 !important;
+    padding: 0 !important;
+    width: 99%; }
+
+.opc .centinel {
+  border: 1px solid #bbb6a5;
+  border-width: 0 1px 1px;
+  padding: 10px 30px; }
+
+/* Generic Info Set */
+.info-set {
+  background: #fbfaf6 url(../images/bkg_checkout.gif) repeat-x 0 0;
+  border: 1px solid #bbb6a5;
+  margin: 0 0 25px;
+  padding: 20px; }
+  .info-set h2 {
+    font-size: 13px;
+    font-weight: bold;
+    margin: 0 0 10px; }
+  .info-set h3, .info-set h4 {
+    color: #E26703;
+    font-size: 13px;
+    font-weight: bold; }
+  .info-set h2 a, .info-set h3 a, .info-set h4 a {
+    font-weight: normal; }
+  .info-set h2.legend {
+    background: #f9f3e3;
+    border-bottom: 1px solid #bbafa0;
+    margin: -20px -20px 15px;
+    padding: 5px 10px;
+    position: relative; }
+  .info-set h3.legend {
+    color: #0a263c;
+    margin: 0 0 10px; }
+  .info-set .divider {
+    margin: 0 -20px;
+    padding: 25px 0;
+    position: relative; }
+  .info-set .box {
+    margin: 0 0 15px; }
+    .info-set .box h2 {
+      color: #e26703; }
+  .info-set .data-table .item-options {
+    margin: 5px 0 0; }
+  .info-set .data-table .product-name {
+    color: #1e7ec8 !important;
+    font-size: 1em !important;
+    font-weight: bold !important; }
+    .info-set .data-table .product-name a {
+      font-weight: bold !important; }
+
+/********** Common Checkout Styles > */
+/* One Page Checkout */
+.block-progress {
+  border: 0;
+  margin: 0; }
+  .block-progress .block-title {
+    background: none;
+    border: 0;
+    padding: 0;
+    margin: 0 0 5px; }
+    .block-progress .block-title strong {
+      color: #0a263c;
+      font-size: 13px; }
+  .block-progress .block-content {
+    background: none; }
+  .block-progress dt {
+    background: #eee;
+    border: 1px solid #a3aeb3;
+    color: #999;
+    font-size: 13px;
+    font-weight: bold;
+    line-height: 1.35;
+    margin: 0 0 6px;
+    padding: 2px 8px; }
+    .block-progress dt.complete {
+      background: #d0dce1;
+      color: #5e8ab4;
+      margin: 0; }
+  .block-progress dd {
+    background: #eee;
+    border: 1px solid #a3aeb3;
+    border-top: 0;
+    margin: 0 0 6px;
+    padding: 8px 13px; }
+  .block-progress p {
+    margin: 0; }
+  .block-progress .cards-list dt {
+    background: none;
+    border: 0 none;
+    color: inherit;
+    font-size: 12px;
+    margin: 5px 0;
+    padding: 0; }
+  .block-progress .cards-list dd {
+    border: 0 none;
+    margin: 0;
+    padding: 0; }
+  .block-progress .cards-list .info-table th {
+    font-weight: normal; }
+
+.opc {
+  position: relative; }
+  .opc .ul {
+    list-style: disc outside;
+    padding-left: 18px; }
+  .opc .buttons-set {
+    margin-top: 0;
+    padding-top: 2em; }
+    .opc .buttons-set p.required {
+      margin: 0;
+      padding: 0 0 10px; }
+    .opc .buttons-set .back-link small {
+      display: none; }
+    .opc .buttons-set .back-link a {
+      background: url(../images/i_arrow-top.gif) no-repeat 0 50%;
+      padding-left: 16px; }
+    .opc .buttons-set.disabled button.button {
+      display: none; }
+    .opc .buttons-set .please-wait {
+      height: 21px;
+      line-height: 21px; }
+  .opc .step-title {
+    background: #eeeeee url(../images/bkg_opc-title-off.gif) repeat-x 0 100%;
+    border-color: #fff #d9dde3 #d9dde3;
+    border-style: solid;
+    border-width: 0 1px;
+    padding: 4px 8px 6px;
+    text-align: right; }
+    .opc .step-title .number {
+      background: #fff;
+      border: 1px solid #fff;
+      color: #999;
+      float: left;
+      font: bold 11px/14px arial, helvetica, sans-serif;
+      margin: 0 5px 0 0;
+      padding: 0 4px; }
+    .opc .step-title h2 {
+      color: #999;
+      float: left;
+      font: bold 13px/16px Arial, Helvetica, sans-serif;
+      margin: 0; }
+    .opc .step-title a {
+      display: none;
+      float: right;
+      font-size: 11px;
+      line-height: 16px; }
+  .opc .allow .step-title {
+    background: #d0dce1;
+    border: 1px solid #a3aeb3;
+    border-bottom: 0;
+    color: #a4b3b9;
+    cursor: pointer; }
+    .opc .allow .step-title .number {
+      background: #dbe6eb;
+      border-color: #dbe6eb;
+      color: #a4b3b9; }
+    .opc .allow .step-title h2 {
+      color: #a4b3b9; }
+  .opc .active .step-title {
+    background: #f9f3e3;
+    border: 1px solid #bbafa0;
+    color: #f18200;
+    cursor: default;
+    padding-bottom: 5px; }
+    .opc .active .step-title .number {
+      background: #f18200;
+      border-color: #f19900;
+      color: #fff; }
+    .opc .active .step-title h2 {
+      color: #f18200; }
+  .opc .step {
+    background: #fbfaf6 url(../images/bkg_checkout.gif) repeat-x 0 0;
+    border: 1px solid #bbafa0;
+    border-top: 0;
+    padding: 15px 30px;
+    position: relative; }
+    .opc .step .tool-tip {
+      right: 30px; }
+  .opc .gift-messages-form {
+    background: #f6f1eb;
+    border: 1px solid #e9e4de;
+    border-width: 1px 0;
+    margin: 0 -30px;
+    padding: 22px 24px 22px 30px; }
+    .opc .gift-messages-form .inner-box {
+      height: 260px;
+      overflow: auto;
+      padding: 5px; }
+
+#opc-login .buttons-set {
+  border-top: 0; }
+#opc-login h3 {
+  border-bottom: 1px solid #e4e4e4;
+  font-size: 13px;
+  padding-bottom: 2px;
+  text-transform: uppercase; }
+#opc-login h4 {
+  color: #2f2f2f;
+  font-size: 1em;
+  font-weight: bold;
+  margin: 0; }
+
+#opc-shipping_method .buttons-set {
+  border-top: 0; }
+
+#opc-review .step {
+  border: 0;
+  padding: 0; }
+#opc-review .product-name {
+  color: #0a263c;
+  font-weight: bold; }
+#opc-review .item-options {
+  margin: 5px 0 0; }
+#opc-review .authentication {
+  margin: 0 auto;
+  width: 570px; }
+#opc-review .warning-message {
+  color: #222;
+  font-weight: bold;
+  padding: 10px 10px 0;
+  text-align: center; }
+#opc-review .buttons-set {
+  border: 1px solid #d9dde3;
+  border-width: 0 1px 1px;
+  padding: 20px 30px; }
+  #opc-review .buttons-set p {
+    line-height: 40px;
+    margin: 0; }
+  #opc-review .buttons-set .please-wait {
+    height: 40px;
+    line-height: 40px; }
+
+/* Multiple Addresses Checkout */
+.checkout-progress {
+  margin: 0 0 20px;
+  padding: 0 90px; }
+  .checkout-progress li {
+    border-top: 10px solid #999;
+    color: #abb5ba;
+    float: left;
+    font-weight: bold;
+    margin: 0 3px 0 0;
+    padding: 2px 0 0;
+    text-align: center;
+    width: 19%; }
+  .checkout-progress li.active {
+    border-top-color: #e96200;
+    color: #e96200; }
+
+.multiple-checkout h2 {
+  font-size: 13px;
+  font-weight: bold;
+  margin: 0 0 10px; }
+.multiple-checkout h3, .multiple-checkout h4 {
+  font-size: 13px;
+  font-weight: bold;
+  color: #E26703; }
+.multiple-checkout h2 a, .multiple-checkout h3 a, .multiple-checkout h4 a {
+  font-weight: normal; }
+.multiple-checkout .data-table .item-options {
+  margin: 5px 0 0; }
+.multiple-checkout .data-table .product-name {
+  color: #1e7ec8 !important;
+  font-size: 1em !important;
+  font-weight: bold !important; }
+  .multiple-checkout .data-table .product-name a {
+    font-weight: bold !important; }
+.multiple-checkout .tool-tip {
+  margin-top: -120px;
+  right: 20px;
+  top: 50%; }
+.multiple-checkout .col2-set, .multiple-checkout .col3-set {
+  background: #fbfaf6 url(../images/bkg_checkout.gif) repeat-x 0 0;
+  border: 1px solid #bbb6a5;
+  margin: 0 0 25px;
+  padding: 20px; }
+.multiple-checkout .col2-set h2.legend {
+  background: #f9f3e3;
+  border-bottom: 1px solid #bbafa0;
+  margin: -20px -20px 15px;
+  padding: 5px 10px;
+  position: relative; }
+.multiple-checkout .col2-set h3.legend {
+  color: #0a263c;
+  margin: 0 0 10px; }
+.multiple-checkout .col2-set .divider {
+  margin: 0 -20px;
+  padding: 25px 0;
+  position: relative; }
+.multiple-checkout .box {
+  margin: 0 0 15px; }
+  .multiple-checkout .box h2 {
+    color: #e26703; }
+.multiple-checkout .place-order .please-wait {
+  float: right;
+  padding: 27px 7px 0 0; }
+.multiple-checkout .place-order .grand-total {
+  background: url(../images/bkg_grand-total.gif) no-repeat 0 0;
+  float: right;
+  font-size: 1.5em;
+  height: 71px;
+  overflow: hidden;
+  padding: 0 0 0 21px; }
+.multiple-checkout .place-order .grand-total .inner {
+  background: url(../images/bkg_grand-total.gif) no-repeat 100% 0;
+  float: left;
+  height: 57px;
+  padding: 14px 21px 0 0; }
+.multiple-checkout .place-order .grand-total .inner div {
+  display: inline; }
+.multiple-checkout .place-order .grand-total big {
+  display: inline;
+  margin-right: 12px; }
+.multiple-checkout .place-order .grand-total .price {
+  color: #E26703; }
+.multiple-checkout .place-order .grand-total button.button span {
+  font-size: 16px; }
+.multiple-checkout .place-order .grand-total button.button span span {
+  padding: 0 45px 0 36px; }
+
+/* Step 1 */
+.multiple-checkout .title-buttons button.button span {
+  background: #618499;
+  border-color: #406a83; }
+
+#multiship-addresses-table td {
+  padding: 10px; }
+#multiship-addresses-table tfoot td {
+  padding: 5px 10px; }
+#multiship-addresses-table tfoot button.button span {
+  background: #618499;
+  border-color: #406a83; }
+
+/* Step 2 */
+.multiple-checkout .gift-messages {
+  margin: 15px 0 0; }
+.multiple-checkout .gift-messages-form .item .details .form-list {
+  overflow: hidden;
+  width: 100%; }
+  .multiple-checkout .gift-messages-form .item .details .form-list li {
+    margin-right: -15px; }
+  .multiple-checkout .gift-messages-form .item .details .form-list .field {
+    width: 230px; }
+  .multiple-checkout .gift-messages-form .item .details .form-list .input-box {
+    width: 215px; }
+  .multiple-checkout .gift-messages-form .item .details .form-list input.input-text {
+    width: 209px; }
+  .multiple-checkout .gift-messages-form .item .details .form-list li.wide .input-box {
+    width: 445px; }
+  .multiple-checkout .gift-messages-form .item .details .form-list li.wide textarea {
+    width: 439px; }
+
+.checkout-multishipping-shipping .box-sp-methods {
+  background: #f9f3e3;
+  border: 1px solid #d9d2be;
+  padding: 13px;
+  position: relative; }
+  .checkout-multishipping-shipping .box-sp-methods .pointer {
+    background: url(../images/bkg_sp-methods.gif) no-repeat 0 0;
+    height: 41px;
+    overflow: hidden;
+    position: absolute;
+    right: -40px;
+    top: -20px;
+    width: 178px; }
+
+/* Step 3 */
+.checkout-multishipping-billing .multiple-checkout {
+  position: relative; }
+
+/* ======================================================================================= */
 /* Account Login/Create Pages ============================================================ */
 .account-login .new-users h2 {
   background-image: url(../images/i_page1.gif); }
